--- a/thesis/tracking_models.tex
+++ b/thesis/tracking_models.tex
@@ -445,14 +445,42 @@ Besides several unit tests for correctness of the derived dependencies and condi
 of small models chosen to test certain features and corner cases, an experimental comparison of
 \autogibbsjl{} and existing \turingjl{} samplers has been conducted.  Three off-the-shelf Bayesian
 models were chosen: a Gaussian mixture model (GMM) with known variances and priors over cluster
-centers, weights, and assignments \parencite[section 6.2]{marin2007bayesian}, a hidden Markov model
+centers, weights, and assignments \parencite[section 6.2]{marin2007bayesian}:
+\begin{equation}
+  \label{eq:gmm}
+  \begin{aligned}
+    w &\from \distr{Dirichlet(K)} \\
+    z_{n} &\from \distr{Categorical}([1, \ldots, K], w), \quad n = 1, \ldots, N \\
+    \mu_{k} &\from \Normal(0, \sigma_{1}), \quad k = 1, \ldots, K \\
+    x_{n} &\from \Normal(\mu_{z_{n}}, \sigma_{1}), \quad n = 1, \ldots, N;
+  \end{aligned}
+\end{equation}
+a hidden Markov model
 (HMM) with known variances and priors over transition and emission probabilities \parencite[section
-7.3]{marin2007bayesian}, and an infinite mixture model (IMM) in stick-breaking construction, but
+7.3]{marin2007bayesian}:
+\begin{equation}
+  \label{eq:hmm}
+  \begin{aligned}
+    T_{k} &\from \distr{Dirichlet}(K), \quad k = 1, \ldots, K \\
+    m_{k} &\from \Normal(k, \sigma_{1}), \quad k = 1, \ldots, K \\
+    s_{1} &\from \distr{Categorical}([1, \ldots, K], [1/K, \ldots, 1/K]) \\
+    s_{k} &\from \distr{Categorical}([1, \ldots, K], T_{s_{k-1}}), \quad k = 2, \ldots, N \\
+    x_{k} &\from \Normal(m_{s_{k}}, \sigma_{2}), \quad k = 1, \ldots, N;
+  \end{aligned}
+\end{equation}
+and an infinite mixture model (IMM) in stick-breaking construction, but
 otherwise of the same form as the GMM, to represent a nonparametric example \parencite[section
-2.2]{hjort2010bayesian}.  The models are implemented in \dppljl{} as shown in
-listing~\ref{lst:evaluation-models}.
-
-The three interesting classes of metrics to evaluate are, in the case of this work,
+2.2]{hjort2010bayesian}:
+\begin{equation}
+  \label{eq:imm}
+  \begin{aligned}
+    w &\from \distr{TruncatedStickBreakingProcess(\alpha, K)} \\
+    z_{n} &\from \distr{Categorical}([1, \ldots, K], w), \quad n = 1, \ldots, N \\
+    \mu_{k} &\from \Normal(0, \sigma_{1}), \quad k = 1, \ldots, K \\
+    y_{n} &\from \Normal(\mu_{z_{n}}, \sigma_{2}), \quad n = 1, \ldots, N.
+  \end{aligned}
+\end{equation}
+In the context of this work, the three interesting classes of metrics are
 \begin{enumerate}
   \firmlist
 \item the \enquote{extraction time} of \autogibbsjl{}, i.e., the time it takes to extract and a
@@ -463,15 +491,15 @@ The three interesting classes of metrics to evaluate are, in the case of this wo
   relevant comparison for the practitioner.)
 \end{enumerate}
 To estimate them, a series of experiments has been conducted.  Each of the test models involves one
-discrete and two continuous parameters.  As a baseline for \autogibbsjl{}'s static conditional (AG),
-\turingjl{}'s Particle Gibbs sampler (PG) was chosen, which is also suited to discrete parameters.
-PG was always used with \(100\) particles, since lower values did not lead to convergent chains.
-Continuous variables were all sampled using Hamiltonian Monte Carlo (HMC) with hand-tuned parameters
-(\(10\) leapfrog steps with step size \(0.05\)).  The experiments have been set up to vary between
-AG and PG, and between \(10\), \(25\), and \(50\) observations, since these determine the size of
-the trace, and thus have an influence on both AG's compile times and the overall sampling time.  All
-measurements were conducted using the following system configuration, as shown by
-\jlinl{InteractiveUtils.versioninfo}:
+discrete and two continuous parameter arrays.  As a baseline for \autogibbsjl{}'s static conditional
+(AG), \turingjl{}'s Particle Gibbs sampler (PG) was chosen, which is also suited to discrete
+parameters.  PG was always used with \(100\) particles, since lower values did not lead to
+convergent chains.  Continuous variables were all sampled using Hamiltonian Monte Carlo (HMC) with
+hand-tuned parameters (\(10\) leapfrog steps with step size \(0.05\)).  The experiments have been
+set up to vary between AG and PG, and between \(10\), \(25\), and \(50\) observations, since their
+number determines the size of the trace, and thus influences both AG's compile times and the overall
+sampling time.  All measurements were conducted using the following system configuration, as shown
+by \jlinl{InteractiveUtils.versioninfo()}:
 \begin{lstlisting}
 Julia Version 1.3.1
 Commit 2d5741174c (2019-12-30 21:36 UTC)
@@ -487,145 +515,38 @@ measurement noise as much as possible.  Each of the three models was benchmarked
 session.  The last two chains of the HMM with \(50\) observations using Particle Gibbs could not be
 completed, due to the twelve hour time limit set by the job scheduler.
 
-If follows a detailed analysis of the results per model in graphical form, based on six plots each.
-First, PG and AG are compared in terms of sampling times by number of observations on the top left.
-Right of this, we have the dependency of the extraction time of AG given the number observations.
-The first of these points is almost always an outlier, since it involves additional compilation
-time.  Through the rest, quadratic a quadratic function is fitted, which always matched the values
-very closely.  \todo{fix x-axis for extraction time plots; remove intercept} On the facing page,
-plots for convergence analysis are visualized.  On the top, the first chain of each combination is
-shown as a qualitative representative (thinned for easier plotting).  Well-converging chains should
-look like white noise, not like a random walk.  Below, the estimated autocorrelation function of the
-same chains is given; these should decrease as quickly as possible to indicate good convergence
-(uncorrelated variables would have zero autocorrelation except for zero lag).\todo{ACF on unthinned
-  chains!}
+The \dppljl{} implementations of the models can be found in listing~\ref{lst:evaluation-models}.
+Note that for each, there exists a second, equivalent implementation used for PG, since particle
+samplers in \turingjl{} require the usage of special data types due to their task copying mechanism.
+
+\newthought{It follows} a detailed analysis of the results per model in graphical form, based on six
+plots each.  First, PG and AG are compared in terms of sampling times by number of observations on
+the top left.  Right of this, we have the dependency of the extraction time of AG given the number
+observations.  The first of these points is almost always an outlier, since it involves additional
+compilation time.  Through the rest, quadratic a quadratic function is fitted, which always matched
+the values very closely.  \todo{fix x-axis for extraction time plots; remove intercept}
+
+On the recto pages, plots for convergence analysis are visualized.  Since these are estimated per
+parameter, and the test models involve larger arrays of parameters, the first elements of the
+continuous and the fifth element of the discrete parameters have always been chosen as
+representatives.  On the top, the first chain of each experimental combination is shown as a
+qualitative representative (thinned for easier plotting).  Well-converging chains should look like
+white noise, not like a random walk.  In the middle plot, the estimated autocorrelation functions of
+the same chains are given, which are a way to evaluate convergence speed by eye.  The functions
+should vanish quickly (indicated by the gray significance bar around the abscissa); uncorrelated
+samples would have zero autocorrelation except for the first lag.\todo{ACF on unthinned chains!}
 
 Lastly, two diagnostic values are plotted for each combination and chain.  The
-\enquote{scale-reduction} \(\hat{R}\), after \textcite{gelman1992inference}, estimates the factor by
-which the scale of the current distribution might be reduced if the simulations were continued
-\parencite[see][p. 285]{gelman2020bayesian}.  It should be close to \(1\) for indicating good
-convergence; as a rule of thumb, a value of more than \(1.1\) is suspicious.  The effective sample
-size (ESS) arises in the estimation of the asymptotic variance of Markov chains
-\parencite[see][section 7.2]{vihola2020lectures}, where it is formally analogous to the sample size
-in the variance estimator for \iid{} Gaussian variables.  The ESS can also be interpreted as a
-one-point summary of the autocorrelation estimate, normalized by chain length.  It should be close
-to the actual number of samples, or at least of the same order of magnitude.
+\enquote{scale-reduction} \(\widehat{\mathrm{R}}\), after \textcite{gelman1992inference}, estimates
+the factor by which the scale of the current distribution might be reduced if the simulations were
+continued \parencite[see][p. 285]{gelman2020bayesian}.  It should be close to one for indicating
+good convergence; as a rule of thumb, a value of more than \(1.1\) is suspicious.  The effective
+sample size (ESS) arises in the estimation of the asymptotic variance of Markov chains
+\parencite[][section 7.2]{vihola2020lectures}, where it is formally analogous to the sample size in
+the variance estimator for \iid{} variables.  The ESS can also be interpreted as a one-point summary
+of the autocorrelation estimate, normalized by chain length.  It should be close to the actual
+number of samples, or at least of the same order of magnitude.\todo{publish measurement data}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\cleartoverso
-\FloatBlock
-
-\begin{figure}[t!]
-  \centering
-  \includegraphics[width=0.49\textwidth]{figures/GMM-sampling_times}
-  \includegraphics[width=0.49\textwidth]{figures/GMM-compile_times}
-  \caption{Sampling and extraction times for GMM.  Points jittered horizontally to increase
-    readability.  A quadratic curve is fit to the extraction times.}
-  \label{fig:plots-gmm}
-\end{figure}
-
-\subsection*{GMM}
-
-The Gaussian mixture model was of the following form:
-\begin{equation}
-  \label{eq:gmm}
-  \begin{aligned}
-    w &\from \distr{Dirichlet(K)} \\
-    z_{n} &\from \distr{Categorical}([1, \ldots, K], w), \quad n = 1, \ldots, N \\
-    \mu_{k} &\from \Normal(0, \sigma_{1}), \quad k = 1, \ldots, K \\
-    x_{n} &\from \Normal(\mu_{z_{n}}, \sigma_{1}), \quad n = 1, \ldots, N;
-  \end{aligned}
-\end{equation}
-
-\cleartorecto
-\FloatBlock
-
-\begin{figure}[p]
-  \centering
-  \includegraphics[width=\textwidth]{figures/GMM-chains}
-  \par
-  \includegraphics[width=\textwidth]{figures/GMM-acfs}
-  \par
-  \includegraphics[width=0.49\textwidth]{figures/GMM-rhat}
-  \includegraphics[width=0.49\textwidth]{figures/GMM-ess}
-  \contcaption{Extraction and sampling times.}
-\end{figure}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\cleartoverso
-\FloatBlock
-
-\begin{figure}[t!]
-  \centering
-    \includegraphics[width=0.49\textwidth]{figures/HMM-sampling_times}
-  \includegraphics[width=0.49\textwidth]{figures/HMM-compile_times}
-  \contcaption{Extraction and sampling times.}
-  \label{fig:plots-hmm}
-\end{figure}
-
-\subsection*{HMM}
-
-\begin{equation}
-  \label{eq:hmm}
-  \begin{aligned}
-    T_{k} &\from \distr{Dirichlet}(K), \quad k = 1, \ldots, K \\
-    m_{k} &\from \Normal(k, \sigma_{1}), \quad k = 1, \ldots, K \\
-    s_{1} &\from \distr{Categorical}([1, \ldots, K], [1/K, \ldots, 1/K]) \\
-    s_{k} &\from \distr{Categorical}([1, \ldots, K], T_{s_{k-1}}), \quad k = 2, \ldots, N \\
-    x_{k} &\from \Normal(m_{s_{k}}, \sigma_{2}), \quad k = 1, \ldots, N;
-  \end{aligned}
-\end{equation}
-
-\cleartorecto
-\FloatBlock
-
-\begin{figure}[p]
-  \centering
-  \includegraphics[width=\textwidth]{figures/HMM-chains}
-  \par
-  \includegraphics[width=\textwidth]{figures/HMM-acfs}
-  \par
-  \includegraphics[width=0.49\textwidth]{figures/HMM-rhat}
-  \includegraphics[width=0.49\textwidth]{figures/HMM-ess}
-  \caption{Extraction and sampling times.}
-\end{figure}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\cleartoverso
-\FloatBlock
-
-\begin{figure}[t!]
-  \centering
-  \includegraphics[width=0.49\textwidth]{figures/IMM-sampling_times}
-  \includegraphics[width=0.49\textwidth]{figures/IMM-compile_times}
-  \caption{Extraction and sampling times.}
-  \label{fig:plots-imm}
-\end{figure}
-
-\subsection*{IMM}
-
-\begin{equation}
-  \label{eq:imm}
-  \begin{aligned}
-    w &\from \distr{TruncatedStickBreakingProcess(\alpha, K)} \\
-    z_{n} &\from \distr{Categorical}([1, \ldots, K], w), \quad n = 1, \ldots, N \\
-    \mu_{k} &\from \Normal(0, \sigma_{1}), \quad k = 1, \ldots, K \\
-    y_{n} &\from \Normal(\mu_{z_{n}}, \sigma_{2}), \quad n = 1, \ldots, N.
-  \end{aligned}
-\end{equation}
-
-\begin{figure}[p]
-  \centering
-  \includegraphics[width=\textwidth]{figures/IMM-chains}
-  \par
-  \includegraphics[width=\textwidth]{figures/IMM-acfs}
-  \par
-  \includegraphics[width=0.49\textwidth]{figures/IMM-rhat}
-  \includegraphics[width=0.49\textwidth]{figures/IMM-ess}
-  \caption{Convergence diagnostics for }
-\end{figure}
-
-\FloatBlock
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{lstfloat}[p]
@@ -692,6 +613,104 @@ end
     distribution from the weight vector as \texttt{1:length(p)}.}
   \label{lst:evaluation-models}
 \end{lstfloat}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\cleartoverso
+\FloatBlock
+
+\begin{figure}[t!]
+  \centering
+  \includegraphics[width=0.49\textwidth]{figures/GMM-sampling_times}
+  \includegraphics[width=0.49\textwidth]{figures/GMM-compile_times}
+  \caption{Sampling and extraction times for GMM, factored by algorithm and number of observations.
+    Points are jittered horizontally to increase readability.  A quadratic curve is fitted to the
+    extraction times.}
+  \label{fig:plots-gmm}
+\end{figure}
+
+\subsection*{Gaussian Mixture Model}
+
+XXX\todo{write interpretation}
+
+
+\cleartorecto
+\FloatBlock
+
+\begin{figure}[p]
+  \centering
+  \includegraphics[width=\textwidth]{figures/GMM-chains}
+  \par
+  \includegraphics[width=\textwidth]{figures/GMM-acfs}
+  \par
+  \includegraphics[width=0.49\textwidth]{figures/GMM-rhat}
+  \includegraphics[width=0.49\textwidth]{figures/GMM-ess}
+  \contcaption{Diagnostics, factored by algorithm, number of observations, and a selection of model
+    parameters.  \(\widehat{\mathrm{R}}\) and ESS point estimates are jittered horizontally for better
+    readability.  For chain plots and autocorrelation, the first chain of the respective combination
+    has been used.}
+\end{figure}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\cleartoverso
+\FloatBlock
+
+\begin{figure}[t!]
+  \centering
+    \includegraphics[width=0.49\textwidth]{figures/HMM-sampling_times}
+  \includegraphics[width=0.49\textwidth]{figures/HMM-compile_times}
+  \contcaption{Extraction and sampling times.}
+  \label{fig:plots-hmm}
+\end{figure}
+
+\subsection*{Hidden Markov Model}
+
+XXX\todo{write interpretation}
+
+
+\cleartorecto
+\FloatBlock
+
+\begin{figure}[p]
+  \centering
+  \includegraphics[width=\textwidth]{figures/HMM-chains}
+  \par
+  \includegraphics[width=\textwidth]{figures/HMM-acfs}
+  \par
+  \includegraphics[width=0.49\textwidth]{figures/HMM-rhat}
+  \includegraphics[width=0.49\textwidth]{figures/HMM-ess}
+  \caption{Extraction and sampling times.}
+\end{figure}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\cleartoverso
+\FloatBlock
+
+\begin{figure}[t!]
+  \centering
+  \includegraphics[width=0.49\textwidth]{figures/IMM-sampling_times}
+  \includegraphics[width=0.49\textwidth]{figures/IMM-compile_times}
+  \caption{Extraction and sampling times.}
+  \label{fig:plots-imm}
+\end{figure}
+
+\subsection*{Infinite Mixture Modell}
+
+XXX\todo{write interpretation}
+
+
+\begin{figure}[p]
+  \centering
+  \includegraphics[width=\textwidth]{figures/IMM-chains}
+  \par
+  \includegraphics[width=\textwidth]{figures/IMM-acfs}
+  \par
+  \includegraphics[width=0.49\textwidth]{figures/IMM-rhat}
+  \includegraphics[width=0.49\textwidth]{figures/IMM-ess}
+  \caption{Convergence diagnostics for }
+\end{figure}
+
+\FloatBlock
+
 
 % \begin{table}[t]
 %   \centering
